# Cinema

./: .gitignore  CMakeLists.txt  README.md
Header/: CursorManager.h  Door.h  PeopleManager.h  Person.h  Screen.h  Seat.h  SeatGrid.h  Simulation.h  State.h  Util.h
Header/Renderers/: PersonRenderer.h  RectRenderer.h  SeatRenderer.h  SignatureRenderer.h
Header/glad/: glad.h
Renderers/: SeatRenderer.cpp  SignatureRenderer.cpp
Shaders/: person.frag  person.vert  rect.vert  seat.vert  signature.vert  texture.frag  texture.vert
Source/: CursorManager.cpp  Main.cpp  Person.cpp  Seat.cpp  SeatGrid.cpp  Simulation.cpp  Util.cpp  glad.c
Source/Renderers/: PersonRenderer.cpp  RectRenderer.cpp
